airflow/logs/dag_id=job_ingestion_pipeline/run_id=scheduled__2025-11-26T110300+0000/task_id=save_statistics/attempt=1.log
[2025-11-26T11:05:00.597+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2025-11-26T11:05:00.674+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: job_ingestion_pipeline.save_statistics scheduled__2025-11-26T11:03:00+00:00 [queued]>
[2025-11-26T11:05:00.698+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: job_ingestion_pipeline.save_statistics scheduled__2025-11-26T11:03:00+00:00 [queued]>
[2025-11-26T11:05:00.718+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 1
[2025-11-26T11:05:00.746+0000] {taskinstance.py:2330} INFO - Executing <Task(_PythonDecoratedOperator): save_statistics> on 2025-11-26 11:03:00+00:00
[2025-11-26T11:05:00.775+0000] {standard_task_runner.py:64} INFO - Started process 417 to run task
[2025-11-26T11:05:00.790+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'job_ingestion_pipeline', 'save_statistics', 'scheduled__2025-11-26T11:03:00+00:00', '--job-id', '36', '--raw', '--subdir', 'DAGS_FOLDER/dag_ingestion.py', '--cfg-path', '/tmp/tmpzt5i9a23']
[2025-11-26T11:05:00.794+0000] {standard_task_runner.py:91} INFO - Job 36: Subtask save_statistics
[2025-11-26T11:05:00.995+0000] {task_command.py:426} INFO - Running <TaskInstance: job_ingestion_pipeline.save_statistics scheduled__2025-11-26T11:03:00+00:00 [running]> on host 97b560c2fa3e
[2025-11-26T11:05:01.351+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='job_ingestion_pipeline' AIRFLOW_CTX_TASK_ID='save_statistics' AIRFLOW_CTX_EXECUTION_DATE='2025-11-26T11:03:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2025-11-26T11:03:00+00:00'
[2025-11-26T11:05:01.354+0000] {taskinstance.py:430} INFO - ::endgroup::
[2025-11-26T11:05:01.391+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2025-11-26T11:05:01.393+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.10/site-packages/sqlalchemy/engine/base.py", line 1910, in _execute_context
    self.dialect.do_execute(
  File "/home/airflow/.local/lib/python3.10/site-packages/sqlalchemy/engine/default.py", line 736, in do_execute
    cursor.execute(statement, parameters)
psycopg2.errors.SyntaxError: syntax error at or near "%"
LINE 6:                     (%(file_name)s, %(total_rows)s, %(valid_...
                             ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/decorators/base.py", line 265, in execute
    return_value = super().execute(context)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/dag_ingestion.py", line 213, in save_statistics
    conn.execute(
  File "/home/airflow/.local/lib/python3.10/site-packages/sqlalchemy/engine/base.py", line 1385, in execute
    return meth(self, multiparams, params, _EMPTY_EXECUTION_OPTS)
  File "/home/airflow/.local/lib/python3.10/site-packages/sqlalchemy/sql/elements.py", line 334, in _execute_on_connection
    return connection._execute_clauseelement(
  File "/home/airflow/.local/lib/python3.10/site-packages/sqlalchemy/engine/base.py", line 1577, in _execute_clauseelement
    ret = self._execute_context(
  File "/home/airflow/.local/lib/python3.10/site-packages/sqlalchemy/engine/base.py", line 1953, in _execute_context
    self._handle_dbapi_exception(
  File "/home/airflow/.local/lib/python3.10/site-packages/sqlalchemy/engine/base.py", line 2134, in _handle_dbapi_exception
    util.raise_(
  File "/home/airflow/.local/lib/python3.10/site-packages/sqlalchemy/util/compat.py", line 211, in raise_
    raise exception
  File "/home/airflow/.local/lib/python3.10/site-packages/sqlalchemy/engine/base.py", line 1910, in _execute_context
    self.dialect.do_execute(
  File "/home/airflow/.local/lib/python3.10/site-packages/sqlalchemy/engine/default.py", line 736, in do_execute
    cursor.execute(statement, parameters)
sqlalchemy.exc.ProgrammingError: (psycopg2.errors.SyntaxError) syntax error at or near "%"
LINE 6:                     (%(file_name)s, %(total_rows)s, %(valid_...
                             ^

[SQL: 
                    INSERT INTO data_quality_stats
                    (file_name, total_rows, valid_rows, invalid_rows,
                     criticality, issues, report_path, created_at)
                    VALUES
                    (%%(file_name)s, %%(total_rows)s, %%(valid_rows)s, %%(invalid_rows)s,
                     %%(criticality)s, %%(issues)s::jsonb, %%(report_path)s, NOW())
                    ]
(Background on this error at: https://sqlalche.me/e/14/f405)
[2025-11-26T11:05:01.440+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=job_ingestion_pipeline, task_id=save_statistics, run_id=scheduled__2025-11-26T11:03:00+00:00, execution_date=20251126T110300, start_date=20251126T110500, end_date=20251126T110501
[2025-11-26T11:05:01.477+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 36 for task save_statistics ((psycopg2.errors.SyntaxError) syntax error at or near "%"
LINE 6:                     (%(file_name)s, %(total_rows)s, %(valid_...
                             ^

[SQL: 
                    INSERT INTO data_quality_stats
                    (file_name, total_rows, valid_rows, invalid_rows,
                     criticality, issues, report_path, created_at)
                    VALUES
                    (%%(file_name)s, %%(total_rows)s, %%(valid_rows)s, %%(invalid_rows)s,
                     %%(criticality)s, %%(issues)s::jsonb, %%(report_path)s, NOW())
                    ]
(Background on this error at: https://sqlalche.me/e/14/f405); 417)
[2025-11-26T11:05:01.568+0000] {local_task_job_runner.py:243} INFO - Task exited with return code 1
[2025-11-26T11:05:01.609+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
